Update styling of page, and fixed issue with e2e test.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,7 @@
 {
     "explorer.openEditors.visible": 5,
     "files.exclude": {
-        "**/.git": true,
-        "src/app/**/*.js": true,
-        "src/tests/**/*.js": true,
-        "**/main.js": true,
-        "**/*.js.map": true
+        "**/.git": true
     },
     "typescript.tsdk": "node_modules/typescript/lib"
 }
