--- a/package.json
+++ b/package.json
@@ -1,32 +1,26 @@
 {
-  "name": "angular-io-example",
+  "name": "angular-movie-app",
   "version": "1.0.0",
   "private": true,
   "description": "Example project from an angular.io guide.",
   "scripts": {
-    "test:once": "karma start karma.conf.js --single-run",
     "build": "tsc -p src/",
     "serve": "lite-server -c=bs-config.json",
-    "prestart": "npm run build",
+    "prestart": "npm run build && npm run lint",
     "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
-    "pretest": "npm run build",
-    "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
-    "pretest:once": "npm run build",
+    "pretest": "npm run build && npm run lint",
+    "test": "karma start karma.conf.js --single-run",
+    "pretest:once": "npm run build && npm run lint",
     "build:watch": "tsc -p src/ -w",
-    "build:upgrade": "tsc",
-    "serve:upgrade": "http-server",
-    "build:babel": "babel src -d src --extensions \".es6\" --source-maps",
-    "copy-dist-files": "node ./copy-dist-files.js",
-    "i18n": "ng-xi18n",
     "lint": "tslint ./src/**/*.ts -t verbose",
-    "serve:e2e": "lite-server -c=bs-config.e2e.json",
-    "pree2e": "npm run build",
+    "pree2e": "npm run build && npm run lint",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
-    "preprotractor": "webdriver-manager update",
+    "serve:e2e": "lite-server -c=bs-config.e2e.json",
+    "webdriver:update": "webdriver-manager update",
     "protractor": "protractor protractor.config.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jeremy Reed <JReed129@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@angular/animations": "~4.2.0",
@@ -45,44 +39,47 @@
     "angular-in-memory-web-api": "~0.3.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "systemjs": "0.19.39",
-    "zone.js": "^0.8.4"
+    "systemjs": "^0.20.15",
+    "zone.js": "^0.8.13"
   },
   "devDependencies": {
-    "@types/angular": "^1.5.16",
+    "@types/angular": "^1.6.26",
     "@types/angular-animate": "^1.5.5",
     "@types/angular-cookies": "^1.4.2",
     "@types/angular-mocks": "^1.5.5",
     "@types/angular-resource": "^1.5.6",
     "@types/angular-route": "^1.3.2",
     "@types/angular-sanitize": "^1.3.3",
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.45",
+    "@types/jasmine": "^2.5.53",
+    "@types/node": "^8.0.12",
     "babel-cli": "^6.16.0",
     "babel-preset-angular2": "^0.0.2",
     "babel-preset-es2015": "^6.16.0",
     "canonical-path": "0.0.2",
     "concurrently": "^3.0.0",
-    "http-server": "^0.9.0",
-    "jasmine": "~2.4.1",
-    "jasmine-core": "~2.4.1",
+    "http-server": "^0.10.0",
+    "jasmine": "^2.6.0",
+    "jasmine-core": "^2.6.4",
+    "jasmine-spec-reporter": "^4.1.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-phantomjs-launcher": "^1.0.2",
     "lite-server": "^2.2.2",
     "lodash": "^4.16.2",
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "~5.1.0",
-    "rollup": "^0.41.6",
+    "rollup": "^0.45.2",
     "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "2.0.0",
-    "rollup-plugin-uglify": "^1.0.1",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "source-map-explorer": "^1.3.2",
-    "tslint": "^3.15.1",
-    "typescript": "~2.3.2"
+    "tslint": "^5.5.0",
+    "typescript": "^2.4.1"
   },
   "repository": {}
 }
